# qlizmet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qlizmet/: __init__.py  __main__.py
src/qlizmet/app/: __init__.py  deck_service.py  library_service.py  paths.py  settings.py  stats_service.py  study_service.py
src/qlizmet/core/: __init__.py  clock.py  markup.py
src/qlizmet/core/grading/: __init__.py  distance.py  grader.py  normalization.py
src/qlizmet/core/models/: __init__.py  card.py  content.py  deck.py  progress.py
src/qlizmet/core/srs/: __init__.py  sm2.py
src/qlizmet/core/stats/: __init__.py  deck_stats.py
src/qlizmet/storage/: __init__.py  repository.py  serialization.py
src/qlizmet/ui/: __init__.py  latex.py  main_window.py  theme.py
tests/: conftest.py  test_card.py  test_card_surface.py  test_content.py  test_deck.py  test_deck_editor_view.py  test_deck_list_view.py  test_deck_repository.py  test_deck_service.py  test_deck_stats.py  test_distance.py  test_face_view.py  test_flashcards.py  test_game_views.py  test_grader.py  test_gravity.py  test_import_export.py  test_learn.py  test_learn_test_views.py  test_library_service.py  test_list_delegate.py  test_main_window.py  test_markup.py  test_match.py  test_modes.py  test_normalization.py  test_package.py  test_paths.py  test_progress.py  test_progress_repository.py  test_serialization.py  test_settings.py  test_sm2.py  test_stats_service.py  test_stats_view.py  test_study_base.py  test_study_service.py  test_study_views.py  test_test_mode.py  test_theme.py  (+1 more)
(+30 files in other folders)
